[package]
name = "king-pusha"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core dependencies
actix-web = "4.3.1"
web-push = "0.9.5"
paperclip = { version = "0.8", features = ["actix4"] }

# serialization and deserialization
serde_json = "1.0.95"
serde = { version = "1.0.130", features = ["derive"] }

# multitasking
tokio = { version = "1", features = ["full"] }
actix-rt = "2.8.0"

# logging
tracing-subscriber = "0.3"
tracing = "0.1"

# runtime utils
actix-files = "0.6.2"
mime_guess = "2.0.4"
dotenv = "0.15.0"
